--- a/app/src/main/res/layout/similar_show_row_layout.xml
+++ b/app/src/main/res/layout/similar_show_row_layout.xml
@@ -8,6 +8,12 @@
         android:layout_width="125dp"
         android:layout_height="175dp"
         fresco:fadeDuration="300"
-        fresco:actualImageScaleType="fitXY" />
+        fresco:actualImageScaleType="fitXY"
+        fresco:placeholderImage="@drawable/placeholder"
+        fresco:placeholderImageScaleType="focusCrop"
+        fresco:failureImage="@drawable/placeholder"
+        fresco:failureImageScaleType="focusCrop"
+        fresco:retryImage="@drawable/placeholder"
+        fresco:retryImageScaleType="focusCrop" />
 
 </LinearLayout>
